# InterviewForgeAI

./: .gitignore  README.md
backend/: .env.example  mise.toml  pyproject.toml  railway.toml
backend/app/: config.py  main.py
backend/app/agents/: orchestrator.py  question_retriever.py  rubric_specialist.py
backend/app/rag/: ingest.py  models.py  vector_store.py
backend/app/routes/: interview.py
backend/app/tools/: question_bank.py
backend/data/: question_bank.json
frontend/: .env.local.example
frontend/app/: layout.tsx  page.tsx
