[project]
name = "interviewforge-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "strands-agents>=1.42.0",
    "strands-agents-tools>=0.8.0",
    "uvicorn[standard]>=0.49.0",
]
